[package]
name = "raft-consensus"
description = "Raft consensus algorithm implementation"
version = "0.5.0"
authors = ["Albibek <albibek@gmail.com>"]
license = "MIT"
repository = "https://github.com/Albibek/raft-consensus"
keywords = ["raft", "consensus", "distributed"]
categories = ["algorithms"]
edition = "2021"
autotests = false

[dependencies]
uuid = {version= "^0.8", features=["v4"]}
byteorder="^1.2"
thiserror = "^1.0"
serde = { version = "^1.0", optional = true, features = ["serde_derive"] }
serde_derive = { version = "^1.0", optional = true }
capnp = { version="^0.14", optional = true }
bytes = { version = "^1.1", features = ["std"] }
tracing = { version = "^0.1", features = ["release_max_level_info", "max_level_trace"] }
tracing-subscriber = { version = "^0.3", optional = true }

[dev-dependencies]
serde_json = "^1.0"
tracing = { version = "^0.1", features = ["release_max_level_info", "max_level_trace", "attributes"] }

[build-dependencies]
capnpc = { version="^0.14", optional = true }
capnp = { version="^0.14", optional = true }

[features]
default = []
use_serde = ["serde", "serde_derive", "uuid/serde", "bytes/serde" ]
use_capnp = ["capnpc", "capnp"]
testing = [ "tracing-subscriber" ]
all = [ "use_serde", "use_capnp", "testing" ]

[[test]]
name = "integration-tests"
path = "tests/lib.rs"
harness = true
